file(GLOB TEST_SRC_LIST CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
set(TEST_MAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/test_main.cc)
list(REMOVE_ITEM TEST_SRC_LIST ${TEST_MAIN_FILE})
set(SELF_MAIN_TESTS test_mutex test_rbtree test_rwmutex test_timer)

if(UTILS_STATIC_LIB)
    set(LINK_LIBS eular::utils_static)
    set(TEST_DEFINITIONS UTILS_STATIC)
elseif(UTILS_DYNAMIC_LIB)
    set(LINK_LIBS eular::utils)
    set(TEST_DEFINITIONS)
endif()

foreach(test_file ${TEST_SRC_LIST})
    get_filename_component(test ${test_file} NAME_WE)

    if(test IN_LIST SELF_MAIN_TESTS)
        add_executable(${test} ${test}.cc)
        target_compile_definitions(${test} PUBLIC ${TEST_DEFINITIONS})
    else()
        add_executable(${test} ${test}.cc ${TEST_MAIN_FILE})
        target_compile_definitions(${test} PUBLIC ${TEST_DEFINITIONS} CATCH_CONFIG_ENABLE_BENCHMARKING)
    endif()

    target_link_libraries(${test} ${LINK_LIBS})
    target_include_directories(${test} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    if(MSVC)
        target_compile_options(${test} PRIVATE /utf-8)
    endif()
    add_test(NAME ${test} COMMAND ${test})
endforeach(test_file)
